--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -173,7 +173,7 @@ body {
    .checkbox-group {
       display: flex;
       align-items: center;
-      margin-top: 10px;
+      margin: 10px 0;
 
       input {
          width: 18px;
